--- a/assets/custom.css
+++ b/assets/custom.css
@@ -265,6 +265,7 @@ img {
   -webkit-transition: all 0.3s ease;
   -o-transition: all 0.3s ease;
   transition: all 0.3s ease;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.12)
 }
 .table > thead > tr > th {
   font-weight: 400;
