--- a/assets/light.css
+++ b/assets/light.css
@@ -859,7 +859,7 @@ img {
   .article-list-item h5:hover svg {
     opacity: 1; }
 .article-list-item img {
-  float: right;
+  margin-top: 20px;
   margin-right: 50px;
   height: 150px;
   width: 170px; }
