--- a/assets/light.css
+++ b/assets/light.css
@@ -862,7 +862,8 @@ img {
   margin-top: 20px;
   margin-right: 50px;
   height: 150px;
-  width: 170px; }
+  display: inline-block;  
+}
 .article-list-item a {
   text-decoration: none; }
 .article-list-item p {
